# parcelwfs

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml  requirements.txt
parcelwfs/: DK.yaml  FI.yaml  __init__.py  parcels.py  parcelwfs.py
ruokavirasto_wfs/: __init__.py  parcels.py  ruokavirasto_wfs.py
tests/: test_parcels.py  test_parcelwfs.py  test_ruokavirasto_wfs.py
